--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ body {
 }
 
 .sub {
-    background-color: #4E4847; /* Black */
+    background-color: #E8E2D3; /* Beige */
     border-style: solid;
     border-color: white;
     color: white;
